Update src/main/java/com/coherentsolutions/pot/insurance_service/repository/CompanySpecification.java
Co-authored-by: Alexander Novash <alexandernovash@gmail.com>